--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700,800,900&display=swap">
+    <style>
+      *{
+        font-family: "Roboto", sans-serif;
+        margin: 0;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
