--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       *{
         font-family: "Roboto", sans-serif;
         margin: 0;
+        scroll-behavior: smooth;
       }
     </style>
     <script type="text/javascript">
