--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
         font-family: "Roboto", sans-serif;
         margin: 0;
         scroll-behavior: smooth;
+        padding: 0;
+        /* height: 100%; */
       }
     </style>
     <script type="text/javascript">
