changed some style in index

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         margin: 0;
         scroll-behavior: smooth;
         padding: 0;
+        overflow: hidden;
         /* height: 100%; */
       }
     </style>
