--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
         margin: 0;
         scroll-behavior: smooth;
         padding: 0;
-        overflow: hidden;
-        /* height: 100%; */
+        height: 100%;
       }
     </style>
     <script type="text/javascript">
